Added some time and date components

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-countdown": "^2.3.4",
     "react-dom": "^18.2.0",
-    "react-snowfall": "^1.2.1"
+    "react-snowfall": "^1.2.1",
+    "sass": "^1.56.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
