--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-countdown": "^2.3.4",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-simple-keyboard": "^3.4.240",
     "react-snowfall": "^1.2.1",
     "sass": "^1.56.1"
