--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.4.3",
     "react-simple-keyboard": "^3.4.240",
     "react-snowfall": "^1.2.1",
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
