--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "scripts": {
     "dev": "vite",
     "ho-ho": "vite",
-    "jingle-bells": "tsc && vite build",
-    "print": "node src/print.js",
-    "build": "tsc && vite build && print",
+    "jingle-bells": "tsc && vite build && node src/print.js",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
