Add auth with pocketbase

--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "pocketbase": "^0.19.0",
+    "pocketbase-react": "^0.1.28",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0",
-    "react-simple-keyboard": "^3.7.37",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.4.3",
+    "react-simple-keyboard": "^3.4.240",
     "react-snowfall": "^1.2.1",
     "sass": "^1.69.5",
     "use-sound": "^4.0.1"
