--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.9.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
