--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "lottie-react": "^2.4.0",
     "pocketbase": "^0.19.0",
     "pocketbase-react": "^0.1.28",
     "react": "^18.2.0",
