--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-simple-keyboard": "^3.4.240",
     "react-snowfall": "^1.2.1",
     "sass": "^1.69.5",
-    "use-sound": "^4.0.1"
+    "use-sound": "^4.0.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.9.1",
